work around scrollbar with issues

--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -4,7 +4,7 @@
   top: var(--sticky-top);
   left: 0;
   right: 0;
-  max-width: 100vw;
+  max-width: calc(100vw - var(--scrollbar-width));
 
   display: flex;
   flex-direction: row;
